@@ -79,7 +79,22 @@ If your device isn't listed, make sure it's connected and turned on.  If clickin
 
 
 <br clear="all" />
-<div id="footer">Created by Digero of Landroval<br /><img src="email.png" /></div><br />
+<table id="footer"><tr>
+<td valign="top" align="left">
+<!-- Begin PayPal Donate Button -->
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="image" src="https://www.paypal.com/en_US/i/btn/x-click-but04.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+<input type="hidden" name="encrypted" value="-----BEGIN PKCS7-----MIIHTwYJKoZIhvcNAQcEoIIHQDCCBzwCAQExggEwMIIBLAIBADCBlDCBjjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtQYXlQYWwgSW5jLjETMBEGA1UECxQKbGl2ZV9jZXJ0czERMA8GA1UEAxQIbGl2ZV9hcGkxHDAaBgkqhkiG9w0BCQEWDXJlQHBheXBhbC5jb20CAQAwDQYJKoZIhvcNAQEBBQAEgYCIUWnjdXufkfkLRMVYA06YmwIlNmHfHJ/S8O4sMAxUFgS64fFELaAkacpTtSHOpl5SqqCNacxvsulY903s4BP18cTh6Pn/WKkfzsPgNJNIYj03biZTOut3h7F0q04AQoA+F1V0IW90ZyKWlFtC7aDxYbvVgeTi2QMq4KAQYVbM8jELMAkGBSsOAwIaBQAwgcwGCSqGSIb3DQEHATAUBggqhkiG9w0DBwQInXku2UE3beSAgagvDZdbCXd5LHsvQGYQ/Ox4ddsYqqkCpq4P9ipQrvXPQCo02PHlpw6oIB/QtzdQMZN60OPk60OiN1ZL0GC/35CZGLUknIMhd9w17tBtvRewlpDDnDPjCDyqkDtjeClLC3vJNLJPtPpBQYQp9MyjkKLtzxVC7qdiGf1Oeb7aV0ItiDlxGKFCVtYAAywattWPIBtT+Hw8NDsAlFVij1RtU3Pt4Eb02W92QzCgggOHMIIDgzCCAuygAwIBAgIBADANBgkqhkiG9w0BAQUFADCBjjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtQYXlQYWwgSW5jLjETMBEGA1UECxQKbGl2ZV9jZXJ0czERMA8GA1UEAxQIbGl2ZV9hcGkxHDAaBgkqhkiG9w0BCQEWDXJlQHBheXBhbC5jb20wHhcNMDQwMjEzMTAxMzE1WhcNMzUwMjEzMTAxMzE1WjCBjjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtQYXlQYWwgSW5jLjETMBEGA1UECxQKbGl2ZV9jZXJ0czERMA8GA1UEAxQIbGl2ZV9hcGkxHDAaBgkqhkiG9w0BCQEWDXJlQHBheXBhbC5jb20wgZ8wDQYJKoZIhvcNAQEBBQADgY0AMIGJAoGBAMFHTt38RMxLXJyO2SmS+Ndl72T7oKJ4u4uw+6awntALWh03PewmIJuzbALScsTS4sZoS1fKciBGoh11gIfHzylvkdNe/hJl66/RGqrj5rFb08sAABNTzDTiqqNpJeBsYs/c2aiGozptX2RlnBktH+SUNpAajW724Nv2Wvhif6sFAgMBAAGjge4wgeswHQYDVR0OBBYEFJaffLvGbxe9WT9S1wob7BDWZJRrMIG7BgNVHSMEgbMwgbCAFJaffLvGbxe9WT9S1wob7BDWZJRroYGUpIGRMIGOMQswCQYDVQQGEwJVUzELMAkGA1UECBMCQ0ExFjAUBgNVBAcTDU1vdW50YWluIFZpZXcxFDASBgNVBAoTC1BheVBhbCBJbmMuMRMwEQYDVQQLFApsaXZlX2NlcnRzMREwDwYDVQQDFAhsaXZlX2FwaTEcMBoGCSqGSIb3DQEJARYNcmVAcGF5cGFsLmNvbYIBADAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBBQUAA4GBAIFfOlaagFrl71+jq6OKidbWFSE+Q4FqROvdgIONth+8kSK//Y/4ihuE4Ymvzn5ceE3S/iBSQQMjyvb+s2TWbQYDwcp129OPIbD9epdr4tJOUNiSojw7BHwYRiPh58S1xGlFgHFXwrEBb3dgNbMUa+u4qectsMAXpVHnD9wIyfmHMYIBmjCCAZYCAQEwgZQwgY4xCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEUMBIGA1UEChMLUGF5UGFsIEluYy4xEzARBgNVBAsUCmxpdmVfY2VydHMxETAPBgNVBAMUCGxpdmVfYXBpMRwwGgYJKoZIhvcNAQkBFg1yZUBwYXlwYWwuY29tAgEAMAkGBSsOAwIaBQCgXTAYBgkqhkiG9w0BCQMxCwYJKoZIhvcNAQcBMBwGCSqGSIb3DQEJBTEPFw0wODA0MTYyMDM3MDBaMCMGCSqGSIb3DQEJBDEWBBQ9HbMIQvdyGLjQ5JFoua49rpQ3aTANBgkqhkiG9w0BAQEFAASBgFr1VND589zUBYQTV9Ag/PEA8KJUjHn02SZfO5rt2LI085i9snSked6kiMs6Eb5N2QWxSoFbH+ONBgS5/INkC6AUyaJH4WVNxaxlCjt2pCx8VasxGV0eTZ/FBCvaHC8DeUEwHTUr7H+4PMynZgdKp5pJosEcMXYCWuEfFL8Ki0mg-----END PKCS7-----
+">
+</form>
+<!-- End PayPal Donate Button -->
+</td>
+<td valign="top" align="right">
+Created by Digero of Landroval<br /><img src="email.png" />
+</td>
+</tr></table><br />
 <div id="copyright">
 	&copy; 2008 acasylum.com<br />
 	The Lord of the Rings Online&trade;: Shadows of Angmar&trade; is a trademark of Turbine, Inc.<br />
